fix footer on small view port devices

--- a/www/src/public/css/glasswaves.css
+++ b/www/src/public/css/glasswaves.css
@@ -1,3 +1,19 @@
+/* 
+This CSS is from this example: https://getbootstrap.com/docs/4.1/examples/sticky-footer/
+
+Except body.margin-top. That's mine :-)
+*/
+html {
+  position: relative;
+  min-height: 100%;
+}
 body {
   margin-top: 5px;
+  margin-bottom: 60px; /* Margin bottom by footer height */
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: #f5f5f5;
 }
